--- a/SITE/src/main/resources/templates/student_management_staff.html
+++ b/SITE/src/main/resources/templates/student_management_staff.html
@@ -28,7 +28,7 @@
       </h4>
     </div>
     <nav class="d-flex flex-wrap gap-2 mt-2 mt-md-0">
-      <a th:href="@{/staff/student-management}" class="btn btn-outline-light btn-sm py-1 py-md-2">
+      <a th:href="@{/staff/projects}" class="btn btn-outline-light btn-sm py-1 py-md-2">
         <i class="bi bi-arrow-left-circle me-2"></i>
         <span class="d-none d-md-inline">Go Back</span>
       </a>
