--- a/SITE/src/main/resources/templates/new_project.html
+++ b/SITE/src/main/resources/templates/new_project.html
@@ -57,6 +57,10 @@
             enctype="multipart/form-data"
             id="projectForm"
           >
+            <div th:if="${errorMessageTitle}" class="alert alert-danger mt-2">
+              <i class="fas fa-exclamation-circle me-2"></i>
+              <span th:text="${errorMessageTitle}"></span>
+            </div>
             <div class="mb-4">
               <label for="title" class="form-label">
                 <i class="bi bi-card-heading me-2 text-primary"></i>Project
@@ -66,6 +70,7 @@
                 type="text"
                 class="form-control form-control-lg"
                 id="title"
+                th:classappend="${errorMessageTitle != null} ? 'is-invalid'"
                 th:field="*{title}"
                 placeholder="Enter project title"
                 required
